Fixed spacing on ballot page

--- a/static/css/ballot.css
+++ b/static/css/ballot.css
@@ -104,3 +104,7 @@
   text-align:center;
   cursor:pointer;
 }
+
+#ballotbottom {
+  margin-bottom: 100px;
+}
